--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: python
+
 python:
  - 2.7
+
 env:
   global:
-    - secure: p3TkQCE4QmetNAPMaizY3s6sh7/rcMlSvsfd0i2iMmAEoslPHU/Qd7kEJbsAXbnMT3Ff/bmiv38XcGvaSzYab+4/lwOmqTiUu/RMy3JZuKT1LhBs7ik33Pc35O3MURBctX9RdsK72PIocaJcyqrs+avnjKqzL
-m4OEp7LJ2QezPI=
+    - secure: "p3TkQCE4QmetNAPMaizY3s6sh7/rcMlSvsfd0i2iMmAEoslPHU/Qd7kEJbsAXbnMT3Ff/bmiv38XcGvaSzYab+4/lwOmqTiUu/RMy3JZuKT1LhBs7ik33Pc35O3MURBctX9RdsK72PIocaJcyqrs+avnjKqzL
+m4OEp7LJ2QezPI="
+
 script:
  - python -V
  - python -c "import os; print os.getenv('FOO')"
