--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,14 @@ env:
  - TOXENV=py25
  - TOXENV=py26
  - TOXENV=py27
- - TOXENV=py30
  - TOXENV=py31
  - TOXENV=py32
  - TOXENV=py33
+
+before_install:
+ - sudo add-apt-repository -y ppa:fkrull/deadsnakes
+ - sudo apt-get update -qq
+ - sudo apt-get install python2.4 python2.5 python3.1
 
 install:
  - pip install tox
