--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,14 @@ env:
  - TOXENV=py33
 
 before_install:
- - sudo add-apt-repository -y ppa:fkrull/deadsnakes
- - sudo apt-get update -qq
- - sudo apt-get install python2.4 python2.5 python3.1
+ - if [[ $(echo "$TOXENV" | egrep -c "(py2[45]|py31)") != 0 ]]; then sudo add-apt-repository -y ppa:fkrull/deadsnakes; fi;
+ - if [[ $(echo "$TOXENV" | egrep -c "(py2[45]|py31)") != 0 ]]; then sudo apt-get update -qq; fi;
+ - if [[ "$TOXENV" == "py24" ]]; then sudo apt-get install -y python2.4; fi;
+ - if [[ "$TOXENV" == "py25" ]]; then sudo apt-get install -y python2.5; fi;
+ - if [[ "$TOXENV" == "py31" ]]; then sudo apt-get install -y python3.1; fi;
 
 install:
- - pip install tox
+ - pip install virtualenv==1.7.2 tox==1.3
 
 script:
  - tox
