--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
  - TOXENV=py31
  - TOXENV=py32
  - TOXENV=py33
+ - TOXENV=py34
 
 before_install:
  - if [[ $(echo "$TOXENV" | egrep -c "(py2[45]|py31)") != 0 ]]; then sudo add-apt-repository -y ppa:fkrull/deadsnakes; fi;
@@ -20,7 +21,8 @@ before_install:
  - if [[ "$TOXENV" == "py31" ]]; then sudo apt-get install -y python3.1; fi;
 
 install:
- - pip install virtualenv==1.7.2 tox==1.3
+ - if [[ $(echo "$TOXENV" | egrep -c "(py2[45]|py31)") != 0 ]]; then pip install virtualenv==1.7.2 tox==1.3; fi;
+ - if [[ $(echo "$TOXENV" | egrep -c "(py2[45]|py31)") == 0 ]]; then pip install tox; fi;
 
 script:
  - tox
