--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ env:
  - TOXENV=py32
  - TOXENV=py33
  - TOXENV=py34
+ - TOXENV=jython
+ - TOXENV=pypy
+ - TOXENV=flake8
 
 before_install:
  - if [[ $(echo "$TOXENV" | egrep -c "(py2[45]|py3[14])") != 0 ]]; then sudo add-apt-repository -y ppa:fkrull/deadsnakes; fi;
