--- a/tox.ini
+++ b/tox.ini
@@ -9,3 +9,11 @@ commands =
 [testenv:flake8]
 commands =
     flake8 .
+
+[testenv:pypy]
+commands =
+    pypy speedtest_cli.py
+
+[testenv:jython]
+commands =
+    jython speedtest_cli.py
