--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ before_install:
  - if [[ "$TOXENV" == "py25" ]]; then sudo apt-get install -y python2.5; fi;
  - if [[ "$TOXENV" == "py31" ]]; then sudo apt-get install -y python3.1; fi;
  - if [[ "$TOXENV" == "py34" ]]; then sudo apt-get install -y python3.4; fi;
+ - if [[ "$TOXENV" == "pypy" ]]; then sudo apt-get install -y pypy; fi;
+ - if [[ "$TOXENV" == "jython" ]]; then sudo apt-get install -y jython; fi;
 
 install:
  - if [[ $(echo "$TOXENV" | egrep -c "(py2[45]|py31)") != 0 ]]; then pip install virtualenv==1.7.2 tox==1.3; fi;
