--- a/tox.ini
+++ b/tox.ini
@@ -8,12 +8,8 @@ commands =
 
 [testenv:flake8]
 commands =
-    flake8 .
+    flake8 ~/sivel/travis-test/
 
 [testenv:pypy]
 commands =
     pypy speedtest_cli.py
-
-[testenv:jython]
-commands =
-    jython speedtest_cli.py
