--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ commands =
 
 [testenv:flake8]
 commands =
-    flake8 ~/sivel/travis-test/
+    flake8 ~/build/sivel/travis-test
 
 [testenv:pypy]
 commands =
