Come on flake8...

--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,13 @@ commands =
     python speedtest_cli.py
 
 [testenv:flake8]
+basepython=python
+deps=flake8
 commands =
-    flake8 ~/build/sivel/travis-test
+    python -V
+    flake8 speedtest_cli.py
 
 [testenv:pypy]
 commands =
+    pypy -V
     pypy speedtest_cli.py
