--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ install:
 
 script:
   - head -1 $(which ansible)
-  - ansible all -i localhost, -m setup -a 'filter=ansible_python'
-  - ansible all -i localhost, -m uri -a url=https://sh.rustup.rs/
+  - ansible localhost -m setup -a 'filter=ansible_python'
+  - ansible localhost -m uri -a url=https://sh.rustup.rs/
+  - ansible-playbook test.yml
